slides and demo project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-vs-nextjs",
+  "name": "svelte-lunch-n-learn",
   "version": "1.0.0",
   "author": "Clayton Ferris <cferris@gmail.com>",
   "private": true
