--- a/example/package.json
+++ b/example/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "svelte",
+  "name": "svelte-deliveries",
   "private": true,
   "scripts": {
-    "dev": "sapper dev",
+    "dev": "sapper dev --no-hot",
     "build": "sapper build",
     "export": "sapper export",
     "start": "node __sapper__/build",
@@ -12,11 +12,15 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "cookie": "^0.4.0",
     "polka": "next",
+    "qs": "^6.8.0",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2",
+    "prettier-plugin-svelte": "^0.7.0",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
     "svelte-loader": "^2.9.0",
